# cpp-starter

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-test.yml
test/: CMakeLists.txt  CMakeLists.txt.in  ExampleTest.cpp
